--- a/index.html
+++ b/index.html
@@ -55,8 +55,8 @@
 <body>
     <!-- Button container for About and Join Us -->
     <div id="buttonContainer" style="display: flex; justify-content: center; margin-bottom: 20px;">
-        <button class="button" style="background-image: linear-gradient(to right, #746544, #9b8149, #D49B0B); color: #ffffff; text-decoration: none; border-radius: 5px; cursor: pointer; margin-right: 10px; margin-bottom: 30px;" onclick="showAbout()">Attendee</button>
-        <button class="button" style="background-image: linear-gradient(to right, #746544, #9b8149, #D49B0B); color: #ffffff; text-decoration: none; border-radius: 5px; cursor: pointer; margin-left:1px; margin-bottom: 30px;" onclick="showJoinUs()">Host</button>
+        <button class="button" style="background-image: linear-gradient(to right, #746544, #9b8149, #D49B0B); color: #ffffff; text-decoration: none; border-radius: 5px; cursor: pointer; margin-right: 10px; margin-bottom: 20px;" onclick="showAbout()">Attendee</button>
+        <button class="button" style="background-image: linear-gradient(to right, #746544, #9b8149, #D49B0B); color: #ffffff; text-decoration: none; border-radius: 5px; cursor: pointer; margin-left:1px; margin-bottom: 20px;" onclick="showJoinUs()">Host</button>
     </div>
     <style>
         @media (max-width: 768px) {
@@ -70,11 +70,11 @@
 
     <!-- About page content -->
     <div id="values2" class="section-4 values" >
-        <div class="container">
+       
             <div class="values-container">
                 <div class="values-content-container">
                     <h2 class="h2" style="color:#D49B0B">Benifits of Host</h2>
-                    <div class="subtext">Open your hearts and home to curious travelers seeking the magic of an Indian wedding. Become a host and create lasting memories, forge genuine connections, and celebrate your culture in a way that goes beyond the ordinary.
+                    <div class="subtext">Open your hearts and home to curious <br/>travelers seeking the magic of an Indian wedding. Become a host and create lasting memories, forge genuine connections, and celebrate your culture in a way that goes beyond the ordinary.
                     </div>
                     <!-- <div class="values-cta-container">
                         <a id="w-node-_5efdc685-3366-bee9-d9b2-c2aac3d4a367-0340374a" href="#" target="_blank" class="cta large w-inline-block">
@@ -158,11 +158,12 @@
 
     <!-- Join Us page content -->
     <div id="values1" class="section-4 values" style="display: none;">
-        <div class="container">
+        
             <div class="values-container">
                 <div class="values-content-container">
                     <h2 class="h2"style="color:#D49B0B">Benifits of Attendee</h2>
-                    <div class="subtext">If you're the kind of traveler that seeks out genuine cultural experiences to broaden your horizons and give you a fresh perspective, then a traditional wedding should be at the top of your list.Go beyond the guidebooks and delve into the vibrant soul of India.</div>
+                    <div class="subtext">If you're the kind of traveler that seeks out genuine cultural experiences to broaden your horizons and give you a fresh perspective, then a traditional wedding should be at the top of your list.
+                        <br/><br/>Go beyond the guidebooks and delve into the vibrant soul of India.</div>
                     <!-- <div class="values-cta-container">
                         <a id="w-node-_5efdc685-3366-bee9-d9b2-c2aac3d4a367-0340374a" href="#" target="_blank" class="cta large w-inline-block">
                             <div class="cta-text">Join Us</div>
